--- a/ACL4SSR_Mini.ini
+++ b/ACL4SSR_Mini.ini
@@ -10,8 +10,8 @@
 ;增强国外GFW：不支持
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/buyu115/rule/main/Clash/LocalAreaNetwork.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/buyu115/rule/main/Clash/BanAD.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/buyu115/rule/main/Clash/BanProgramAD.list
+;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/buyu115/rule/main/Clash/BanAD.list
+;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/buyu115/rule/main/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/buyu115/rule/main/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/buyu115/rule/main/Rulest/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/buyu115/rule/main/Rulest/Steam.list
@@ -27,7 +27,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+;custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 enable_rule_generator=true
